@@ -7,6 +7,13 @@
 	zakaria08esi@gmail.com
 							-->
 
+							
+<!-- 
+	TODO  LIST
+	# use textbox instead of toolbaritem id="AlfanousTB-SearchTerms-TBItem"
+	# enable search history and autocomplete in textbox
+							-->							
+							
 <!-- css sheet used -->
 
 <?xml-stylesheet href="chrome://alfanoustoolbar/skin/alfanoustoolbar.css" type="text/css"?>
