@@ -1,3 +1,8 @@
+2012-08-31  zaki Smahi <zakaria08esi@gmail.com>
+
+    	* TODO  LIST to next update 0.6
+		* open  links in  new tab instead of getting last browser window
+
 2012-08-19  zaki Smahi <zakaria08esi@gmail.com>
 
     	* launching the first release 0.5
